--- a/app/src/main/res/layout/recycler_image_item.xml
+++ b/app/src/main/res/layout/recycler_image_item.xml
@@ -11,12 +11,14 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_marginStart="10dp"
-        android:textSize="24sp"
+        android:textSize="18sp"
+        android:layout_weight="1"
         android:text="@string/app_name"/>
 
     <ImageView
         android:id="@+id/gank_image"
-        android:layout_width="50dp"
+        android:layout_weight="1"
+        android:layout_width="400dp"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
