--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <Button
         android:id="@+id/button_network_request_1"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/x2"
         android:layout_height="50dp"
         android:text="Network Request"/>
 
